syntax = "proto3";

package auth;

service AuthService {
  rpc SignUp (SignUpRequest) returns (SignUpResponse) {}
  rpc SignIn (SignInRequest) returns (SignInResponse) {}
  rpc Validate (ValidateRequest) returns (ValidateResponse) {}
}

// SignUp

message SignUpRequest {
  string email = 1;
  string password = 2;
}

message SignUpResponse {
  int32 status = 1;
  repeated string error = 2;
}

// SignIn

message SignInRequest {
  string email = 1;
  string password = 2;
}

message SignInResponse {
  int32 status = 1;
  repeated string error = 2;
  string token = 3;
}

// Validate

message ValidateRequest {
  string token = 1;
}

message ValidateResponse {
  int32 status = 1;
  repeated string error = 2;
  int32 userId = 3;
}