syntax = "proto3";

package product;

service ProductService {
  rpc Create (CreateProductRequest) returns (CreateProductResponse) {}
  rpc FindMany (FindManyRequest) returns (FindManyResponse) {}
  rpc FindOne (FindOneRequest) returns (FindOneResponse) {}
  rpc Update (UpdateRequest) returns (UpdateResponse) {}
  rpc Delete (DeleteRequest) returns (DeleteResponse) {}
}

message Product {
  int32 id = 1;
  string name = 2;
  int32 stock = 3;
  int32 price = 4;
}

message Error {
  int32 status = 1;
  string name = 2;
  string message = 3;
}

message CreateProductRequest {
  string name = 1;
  int32 stock = 2;
  double price = 3;
}

message CreateProductResponse {
  message Data {
    int32 id = 1;
  }

  optional Data data = 1;
  optional Error error = 2;
}

message FindOneRequest {
  int32 id = 1;
}

message FindOneResponse {
  optional Product data = 1;
  optional Error error = 2;
}

message FindManyRequest {
  string keyword = 1;
  int32 page = 2;
  int32 limit = 3;
}

message FindManyResponse {
  message Meta {
    int32 total = 1;
    optional int32 page = 2;
    optional int32 limit = 3;
  }

  repeated Product data = 1;
  Meta meta = 2;
}

message UpdateRequest {
  Product data = 1;
}

message UpdateResponse {
  optional Product data = 1;
  optional Error error = 2;
}

message DeleteRequest {
  int32 id = 1;
}

message DeleteResponse {
  message Data {
    int32 id = 1;
  }

  Data data = 1;
  optional Error error = 2;
}